hidden navbar position fix, removed scrolldown on short screens, everything behind #tint now gets display: none on #HamburgerFull and small fixes

--- a/main.css
+++ b/main.css
@@ -64,8 +64,8 @@ body{
     background-color: rgb(180, 14, 14);
     border-radius: 0.2rem;
     margin: 0.5rem;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 25px;
+    margin-right: 25px;
     border: 2px solid #fffff9;
 }
 
@@ -117,8 +117,8 @@ body{
     position: fixed;
     bottom: 3rem;
     left: 50%;
-    height: 70%;
-    margin-top: -37.5%;
+    height: 60vh;
+    top: 20%;
     width: 60%;
     margin-left: -30%;
     z-index: 10;
@@ -155,7 +155,7 @@ body{
 #Hamburger a.active {
     background-color: #FFFFF9;
     color:  #10100F;
-    border: 4px solid darkred;
+    border: 2px solid darkred;
 }
 
 #Hamburger a:hover {
@@ -198,16 +198,24 @@ body{
     display: block;
     z-index: 10;
 }
+#HamburgerFull:target ~ *{
+    display: none;
+}
+#HamburgerFull:target .navbar{
+    display: none;
+}
+
 
 #hamburgerX{
     width: 35px;
     height: 4px;
-    margin-top: 5.3px;
     position: fixed;
     top: 0px;
-    right: 5px;
+    right: 25px;
     height: 61px !important;
     width: 67px !important;
+    margin-right: 25px;
+    margin-top: 8px;
 
 }
 .bar4{
@@ -929,6 +937,13 @@ navHr[visible]:not(:focus-within) {
     }
 }
 
+@media screen and (max-height: 700px){
+    .wholeScroll{
+        display: none;
+    }
+}
+
+
 /*Litt mindre padding på rows, i mobiltelefonmodus*/
 @media screen and (max-width: 500px){
     .row{
@@ -1216,7 +1231,7 @@ navHr[visible]:not(:focus-within) {
 
 /* Nav-overlay fix for landskapsmodus */
 @media screen and (max-height: 610px){
-    #Hamburger a{
+    #Hamburger a:not(#hamburgerX){
         padding: 0.5rem;
     
     }
@@ -1244,7 +1259,6 @@ navHr[visible]:not(:focus-within) {
     #Hamburger{
         height: 100%;
     }
-
 }
 
 @media screen and (max-width: 350px){
@@ -1252,3 +1266,5 @@ navHr[visible]:not(:focus-within) {
         font-size: 14pt;
     }
 }
+
+
